--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "express": "^4.18.2",
     "nodemon": "^2.0.22"
   },
-  "name": "1204",
+  "name": "nodejs_atividade",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
